# hackernews-rust

./: .gitignore  Cargo.toml  README.md  new.rs  test.rs
account/src/: lib.rs
actors_persistence/: Cargo.toml
actors_persistence/src/ports/: actor.rs
admin/: Cargo.toml
admin/src/: lib.rs
admin/templates/: base.html
app/: Cargo.toml
app/src/: main.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
gateway/: Cargo.toml
migrations/: 20240413043325_init.down.sql  20240413043325_init.up.sql
persistence/: Cargo.toml
persistence/src/: adapters.rs  errors.rs  lib.rs  ports.rs
persistence/src/adapters/: postgres.rs
persistence/src/common/: types.rs
persistence/src/ports/: persistence.rs
post/: Cargo.toml
request/: Cargo.toml
request/src/ports/: request.rs
scripts/: gateway.sh
