[package]
name = "actors_persistence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
sqlx = { version = "0.7.4", features = ["postgres", "sqlite", "runtime-tokio"] }

[[bin]]
name = "persistence"
path = "bin/main.rs"
