[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow= { workspace = true }
axum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[lib]
name = "gateway"
path = "src/lib.rs"

[[bin]]
name = "gateway"
path = "bin/main.rs"
