[package]
name = "post"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow= { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[lib]
name = "post"
path = "src/lib.rs"

[[bin]]
name = "post"
path = "bin/main.rs"
